# rmsd-tool

./: README.md  docs.md  fpm.toml  index.html  meson.build  search.html
.github/workflows/: build.yml  docs.yml
app/: main.f90  meson.build  targ.f90
config/: meson.build
interface/: get_rmsd.html  get_rmsd~2.html  new_rmsd_filter.html  read_structure.html
lists/: files.html  modules.html  procedures.html  types.html
man/: mctc-rmsd.1.adoc
module/: rmsd.html  rmsd_config.html  rmsd_filter.html  rmsd_ls.html  rmsd_toml.html  rmsd_version.html  targ.html
proc/: get_arguments.html  get_config_file.html  get_options.html  get_rmsd_version.html  get_variable.html  help.html  is_windows.html  new_argument_parser.html  new_rmsd_config.html  read_config_file.html  read_structure_from_arg.html  version.html
program/: rmsd_main.html
sourcefile/: config.f90.html  filter.f90.html  ls.f90.html  main.f90.html  rmsd.f90.html  targ.f90.html  toml.f90.html  version.f90.html
src/: ls.f90  main.f90  meson.build  rmsd.f90  targ.f90  toml.f90
src/rmsd/: config.f90  filter.f90  ls.f90  meson.build  toml.f90  version.f90
subprojects/: mctc-lib.wrap  toml-f.wrap
test/: main.f90  meson.build  test_rmsd.f90  test_rmsd_filter.f90
tipuesearch/: tipuesearch_content.js
type/: arg_type.html  rmsd_config_type.html  rmsd_filter_type.html  targ_type.html
